objects/tffa__EnvironmentConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage environment attributes</description>
    <fields>
        <fullName>AllowedOwnershipCodesForDeficitTransfer__c</fullName>
        <description>Allowed Ownership Codes For DeficitTransfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Ownership Code: DeficitTransfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowedOwnershipCodesForInitialFunding__c</fullName>
        <description>Allowed Ownership Codes For Initial Funding</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Ownership Code: Initial Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowedProductsForDeficitTransfer__c</fullName>
        <description>Allowed Products For Defict Transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Products For Deficit Transfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowedProductsForInitialFunding__c</fullName>
        <description>Allowed Products For Initial Funding</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Products For Initial Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedBusinessProdsForTransfer__c</fullName>
        <description>Business Products For Deficit Transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Products For Deficit Transfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedBusinessProductsForCardIssuance__c</fullName>
        <description>Business Products For Debit Cards</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Products For Debit Cards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedDebitCardRelnship__c</fullName>
        <description>Allowed Debit Card Relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Debit Card Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedOwnershipCodesDeficitTransfer__c</fullName>
        <description>Allowed Ownership Codes For DeficitTransfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Ownership Code: DeficitTransfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedOwnershipCodesForCardIssuance__c</fullName>
        <description>Relationships For Debit Cards Both Business And Consumer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationships For Debit Cards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedOwnershipCodesForExtAccounts__c</fullName>
        <description>Interest payout ownership codes both Business and Consumer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Payout Ownership Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedOwnershipCodesInitialFunding__c</fullName>
        <description>Allowed Ownership Codes For Initial Funding</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Ownership Code: Initial Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedProductsForCardIssuance__c</fullName>
        <description>Consumer Product Codes For Debit Cards</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Product Codes For Debit Cards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedProductsForDeficitTransfer__c</fullName>
        <description>Allowed Products For Defict Transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Products For Deficit Transfer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedProductsForInitialFunding__c</fullName>
        <description>Allowed Products For Initial Funding</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Allowed Products For Initial Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZAllowedProductsForInterestPayout__c</fullName>
        <description>Interest payout product code list account list</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest payout productCode list</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZHSAProductCodes__c</fullName>
        <description>HSA Product Codes For Debit Cards</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HSA Product Codes For Debit Cards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZOLBEligibleBusinessProductCode__c</fullName>
        <description>Business Product codes eligible for OLB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Product codes eligible for OLB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZRequiredProductsForIOLTAIBRETA__c</fullName>
        <description>Required Products For IOLTAIBRETA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Required Products For IOLTAIBRETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AllowJointCollaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether joint applicant collaboration flow is enabled</description>
        <label>Allow joint collaboration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedDisclosureDeliveryType__c</fullName>
        <description>Allowed options of disclosure delivery types configured in the system.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure the type, with each type separated by a semicolon ;. Example - EMBEDDED;PRINT;REMOTE</inlineHelpText>
        <label>Allowed Disclosure Delivery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AppleMobileAppUrl__c</fullName>
        <description>Url to the apple app app store to download the banks app</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apple Mobile App Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__ApplicationLinkValidityDuration__c</fullName>
        <defaultValue>1440</defaultValue>
        <description>It is the duration of time in minutes after which an application link gets expired.</description>
        <label>Application Validity Duration (mins)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ApplicationRetentionPeriod__c</fullName>
        <defaultValue>730</defaultValue>
        <description>It is the duration of time after which an application record is deleted from the system.</description>
        <inlineHelpText>This should be greather than the expiration duration</inlineHelpText>
        <label>Application Retention Period in days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__BaseUrl__c</fullName>
        <description>Salesforce instance base Url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__BicCode__c</fullName>
        <description>BIC stands for Bank Identifier Code. It is an international bank code that identifies particular banks worldwide. Same as SWIFT Code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>BIC stands for Bank Identifier Code. It is an international bank code that identifies particular banks worldwide. Same as SWIFT Code</inlineHelpText>
        <label>BIC/SWIFT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ClientCode__c</fullName>
        <description>A logical identifier for the client. Usually an abbreviated version of the client name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContactAddress__c</fullName>
        <description>Contact Address for Instituition in a Single Line</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Address for Instituition in a Single Line</inlineHelpText>
        <label>Contact Address (Single line)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ContactEmail__c</fullName>
        <description>Contact Email for Instituition</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContactPhone__c</fullName>
        <description>Contact Phone for Institution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauAddress__c</fullName>
        <description>Contact Address for Debit Bureau in a Single Line</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Address for Debit Bureau in a Single Line</inlineHelpText>
        <label>Debit Bureau Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauName__c</fullName>
        <description>Name of the debit bureau as identified in the application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Bureau Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauPhone__c</fullName>
        <description>Contact Phone Number for Debit Bureau</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Bureau Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultBrandCode__c</fullName>
        <description>If Multi Brand is enabled , then use this field for the default brand if none is passed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Multi Brand is enabled , then use this field for the default brand if none is passed</inlineHelpText>
        <label>Default Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultCountry__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <description>The default country or country of installation of the application. Use ISO 3166-1 Alpha-2 country code only e.g. US.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The default country or country of installation of the application. Use ISO 3166-1 Alpha-2 country code only e.g. US.</inlineHelpText>
        <label>Default Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultLocale__c</fullName>
        <defaultValue>&quot;en-US&quot;</defaultValue>
        <description>The default locale of the application. Use values from Language picklist only e.g. en-US.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The default locale of the application. Use values from Language picklist only e.g. en-US.</inlineHelpText>
        <label>Default Locale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultReplyToEmailAddress__c</fullName>
        <description>The Institution wide email address that receives the message when a recipient replies</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Institution wide email address that receives the message when a recipient replies</inlineHelpText>
        <label>Default Reply To Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultSenderEmailAddress__c</fullName>
        <description>Org wide sender email Address for this Institution</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Org wide sender email Address for this Instituition</inlineHelpText>
        <label>Default Sender Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DisclosureReminderSchedule__c</fullName>
        <description>Disclosure signing reminder frequency in Days.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure Disclosure signing reminder schedule in number of days, with each number separated by a semicolon ; 
        Example - 5;15;30</inlineHelpText>
        <label>Disclosure Reminder Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EnableBeneficiaryOFACCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, OFAC check is performed on beneficiaries added to the application.</description>
        <inlineHelpText>If true, OFAC check is performed on beneficiaries added to the application.</inlineHelpText>
        <label>Enable Beneficiary OFAC check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableBrand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether Multi Brands are enabled</description>
        <inlineHelpText>Indicates whether Multi Brands are enabled</inlineHelpText>
        <label>Enable Multi Brands</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableConsolidatedFunding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, all deposit accounts are can be funded together using a single funding request.</description>
        <label>Enable Consolidated Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableCryptoServices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if crypto custodial services are enabled in the system</description>
        <label>Enable Crypto Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableEstatedValuation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if estated is enabled for property details fetch</description>
        <inlineHelpText>True if estated is enabled for property details</inlineHelpText>
        <label>Enable Estated Property Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableExperimentalJsonSerializationApi__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the new performant JSON serialization API for SObject(s). Currently available for opt-in. In the next release this will become the default.</description>
        <inlineHelpText>Enables the new performant JSON serialization API for SObject(s). Currently available for opt-in. In the next release this will become the default.</inlineHelpText>
        <label>Enable experimental JSON serializn API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableGeoFencing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If geo fencing is enabled</description>
        <inlineHelpText>If geo fencing is enabled</inlineHelpText>
        <label>Enable Geo Fencing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableIovationDeviceFingerprinting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Iovation is used to capture device fingerprint.</description>
        <inlineHelpText>If true, Iovation is used to capture device fingerprint.</inlineHelpText>
        <label>Enable Iovation Device Fingerprinting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableMultiFactorAuthentication__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If multi factor authentication is enabled</description>
        <label>Enable Multi Factor Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableMultipleAccountExternalDisclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the external disclosures are to be generated for the multiple applications in one transaction. Default value is set to false to generate the external disclosures per application. Flag is added to optimize the performance of disclosure document generation process.</description>
        <inlineHelpText>If true, the external disclosures are to be generated for the multiple applications in one transaction. Default value is set to false to generate the external disclosures per application. Flag is added to optimize the performance of disclosure document generation
        process.</inlineHelpText>
        <label>Enable Multiple Account Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidAssets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid assets is enabled for fetching assets</description>
        <inlineHelpText>True if plaid assets is enabled for fetching assets</inlineHelpText>
        <label>Enable Plaid assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidAuthIdentity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid identity is enabled for applicant verification</description>
        <inlineHelpText>True if plaid identity is enabled for applicant verification</inlineHelpText>
        <label>Enable Plaid Auth Verify Identity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidAuthItemAutoRemove__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if plaid auth item is removed automatically</description>
        <inlineHelpText>True if plaid auth item is removed automatically</inlineHelpText>
        <label>Enable Plaid Auth Item Automatic Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid auth is enabled for ach transfer</description>
        <inlineHelpText>True if plaid auth is enabled for ach transfer</inlineHelpText>
        <label>Enable Plaid Auth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid balance is enabled for refreshing the real time balances</description>
        <inlineHelpText>True if plaid balance is enabled for refreshing the real time balances</inlineHelpText>
        <label>Enable Plaid balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidBankTransfers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid bank transfers is enabled</description>
        <inlineHelpText>True if plaid bank transfers is enabled</inlineHelpText>
        <label>Enable Plaid Bank Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidDepositSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid deposit switch is enabled</description>
        <inlineHelpText>True if plaid deposit switch is enabled</inlineHelpText>
        <label>Enable Plaid Deposit Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidIdentity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid identity prefill is enabled</description>
        <inlineHelpText>True if plaid identity prefill is enabled</inlineHelpText>
        <label>Enable Plaid Identity Prefill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidIncomeVerification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid income verification is enabled</description>
        <inlineHelpText>True if plaid income verification is enabled</inlineHelpText>
        <label>Enable Plaid Income Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnablePlaidLiabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if plaid liabilities is enabled for fetching liabilities</description>
        <inlineHelpText>True if plaid liabilities is enabled for fetching liabilities</inlineHelpText>
        <label>Enable Plaid liabilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableReCaptcha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if reCAPTCHA is enabled for web fraud detection</description>
        <label>Enable reCAPTCHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableRemoteFunding__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If remote funding mode is enabled</description>
        <label>Enable Remote Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableSchemaCaching__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables caching of schema information for Guest sessions.</description>
        <inlineHelpText>Enables caching of schema information for Guest sessions.</inlineHelpText>
        <label>Enable Schema Caching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableUXStrategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether UX Strategies for A/B Testing is enabled</description>
        <inlineHelpText>Indicates whether UX Strategies for A/B Testing is enabled</inlineHelpText>
        <label>Enable UX Experiments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ErrorOnGeoFencingThreatLevelHigh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If geo fencing error is thrown if threat level is high or is TOR or is Proxy</description>
        <inlineHelpText>If geo fencing error is thrown if threat level is high or is TOR or is Proxy</inlineHelpText>
        <label>Enable Geo Fencing Error on Threat Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitutionName__c</fullName>
        <description>Full Name of the Financial Instituition</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short Name of the Financial Instituition</inlineHelpText>
        <label>FI Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitutionShortName__c</fullName>
        <description>Short Name of the Financial Instituition</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short Name of the Financial Instituition</inlineHelpText>
        <label>FI Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__GenericErrorPage__c</fullName>
        <description>The route to be used for navigating to the a generic error page</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The route to be used for navigating to the a generic error page</inlineHelpText>
        <label>Generic Error Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__GoogleMobileAppUrl__c</fullName>
        <description>A url to google mobile app store link for download. Will be used to show in confirmation page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Mobile App Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IncludeAllDisclosuresInEnvelope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if all the generated disclosure documents are to be included in the disclosure envelope for signing/viewing purpose. Default is false, which includes only the signable disclosure documents in the envelope.</description>
        <inlineHelpText>True, if all the generated disclosure documents are to be included in the disclosure envelope for signing/viewing purpose. Default is false, which includes only the signable disclosure documents in the envelope.</inlineHelpText>
        <label>Include All Disclosures In Envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Location of additional resource about the Instituition as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsCreditUnion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True , if the Financial Instituition is a  credit union</description>
        <inlineHelpText>True , if the Financial Instituition is a  credit union</inlineHelpText>
        <label>Is FI a Credit Union ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsSandbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if current organization is a sandbox. Value should be set equal to Organization.IsSandbox.</description>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Key__c</fullName>
        <description>Key used by system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cipher Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LocationResolutionRange__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The maximum distance (in miles) allowed when resolving the nearest location (branch) for a submission.</description>
        <inlineHelpText>The maximum distance (in miles) allowed when resolving the nearest location (branch) for a submission.</inlineHelpText>
        <label>Location Resolution Range (miles)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxApplicationCount__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Maximum number of applications possible in a single submission. Translates to maximum number of products that can be applied in a single session.</description>
        <inlineHelpText>Maximum number of applications possible in a single submission or maximum number of products that can be applied in a single session.</inlineHelpText>
        <label>Maximum Application Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxBeneficiaryCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of beneficiaries that can be captured for a party.</description>
        <label>Maximum Beneficiary Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxIndividualApplicantCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of Individual type of applicants.</description>
        <label>Maximum Individual Applicant Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfDisclosuresInEnvelope__c</fullName>
        <description>Maximum number of disclosure documents allowed in a single envelope.</description>
        <inlineHelpText>Maximum number of disclosure documents allowed in a single envelope. System will split the set of documents into multiple envelopes if the count is more than the configured threshold.</inlineHelpText>
        <label>Max Number Of Disclosures In Envelope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOLBAuthenticationRetryCount__c</fullName>
        <description>Upper bound on count of OLB authentication attempts.</description>
        <label>Max OLB authentication retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOTPGenerationRetryCount__c</fullName>
        <description>Upper bound on count of OTP generation attempts.</description>
        <label>Max OTP generation retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOTPRetryCount__c</fullName>
        <description>Upper bound on count of OTP validation attempts.</description>
        <label>Max OTP retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOrganizationApplicantCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of Organization type of applicants.</description>
        <label>Maximum Organization Applicant Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOtherIncomeCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of other type of incomes that can be captured for a party.</description>
        <label>Maximum Other Income Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxPreviousAddressCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of previous addresses that can be captured for a party.</description>
        <label>Maximum Previous Address Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxPreviousEmployerCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of previous employers that can be captured for a party.</description>
        <label>Maximum Previous Employer Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MinAddressHistoryInYears__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Minimum years of address history to be captured for a party.</description>
        <label>Minimum Years of Address History</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MinorAgeThreshold__c</fullName>
        <defaultValue>18</defaultValue>
        <description>In law, a minor is a person under a certain age, usually the age of majority, which legally demarcates childhood from adulthood. The age of majority depends upon jurisdiction and application, but it is generally 18.</description>
        <inlineHelpText>In law, a minor is a person under a certain age, usually the age of majority, which legally demarcates childhood from adulthood. The age of majority depends upon jurisdiction and application, but it is generally 18.</inlineHelpText>
        <label>Minor Age Threshold</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NotificationEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If notifications are enabled</description>
        <label>Notification enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OTPValidityDuration__c</fullName>
        <defaultValue>43200</defaultValue>
        <description>It is the duration of time in minutes after which a OTP is expired .</description>
        <label>OTP Validity duration in mins</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingEntityId__c</fullName>
        <description>Core banking entity id as identified by the Online banking provider system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Banking Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>